Fix tab panel size and spacing

--- a/static/css/tabs.css
+++ b/static/css/tabs.css
@@ -1,8 +1,3 @@
-.tabs {
-  width: 20em;
-  font-family: "lucida grande", sans-serif;
-}
-
 [role="tablist"] {
   margin: 0 0 -.1em;
   overflow: visible;
@@ -93,10 +88,6 @@
   border-bottom: 3px solid hsl(20, 96%, 48%);
   border-radius: 0 0 0.2em 0.2em;
   content: '';
-}
-
-[role="tabpanel"] p {
-  margin: 0;
 }
 
 [role="tabpanel"] * + p {
